--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -80,7 +80,10 @@
                                 <a href="">Nettbutikk/eCommerce</a>
                             </div>
                             <div class="nav-link-parent">
-                                <a href="">Blogg</a>
+                                <a href="">Personlig nettside</a>
+                            </div>
+                            <div class="nav-link-parent">
+                                <a onclick="" id="pricesToggle">Tilleg<i class="fas fa-sort-down"></i></a>
                             </div>
                         </div>
                     </div>
